# school-boundaries

./: .gitignore  README.md  main.ipynb  main.py  main.sh  pyproject.toml
src/: 01_kom_features.py  01_parse_voronoi.py  02_parse_voronoi.py  02_plot_voronoi.py  03_plot_voronoi.py  utils.py
