[project]
name = "school-boundaries"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "polars>=1.32.3",
    "polars-st>=0.3.0",
    "pyarrow>=21.0.0",
    "spatial-polars>=0.1.5",
    "tqdm>=4.67.1",
]
