[project]
name = "school-boundaries"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb-extension-spatial>=1.3.0",
    "geopandas>=1.1.1",
    "ibis-framework[duckdb,geospatial]>=10.5.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "osmnx>=2.0.6",
    "polars>=1.32.3",
    "pyarrow>=21.0.0",
    "scipy>=1.16.1",
    "tqdm>=4.67.1",
]
